--- a/kustomize-demo/nginx-deployment.yaml
+++ b/kustomize-demo/nginx-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
     app: nginx
   name: nginx
 spec:
-  replicas: 5
+  replicas: 10
   selector:
     matchLabels:
       app: nginx
@@ -15,5 +15,5 @@ spec:
         app: nginx
     spec:
       containers:
-      - image: nginx
+      - image: xmaeltht/nginx
         name: nginx
