--- a/kustomize-demo/nginx-deployment.yaml
+++ b/kustomize-demo/nginx-deployment.yaml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: nginx
-  name: nginx
+    app: web
+  name: web
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: web
   template:
     metadata:
       labels:
-        app: nginx
+        app: web
     spec:
       containers:
       - image: armand0007/web-armand
