--- a/kustomize-demo/nginx-svc.yaml
+++ b/kustomize-demo/nginx-svc.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: nginx
-  name: nginx
+    app: web
+  name: web
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 80
   selector:
-    app: nginx
+    app: web
   type: NodePort
